--- a/index.html
+++ b/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant Website</title>
+
+    <!-- Font Awesome icons-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="css/master.css">
+
 </head>
+
 <body>
-    
+    <header>
+        <a href="#" class="logo"><i class="fa-solid fa-utensils"></i>resto.</a>
+
+        <nav class="navbar">
+            <a class="active" href="#home">Home</a>
+            <a href="#dishes">Dishes</a>
+            <a href="#about">About</a>
+            <a href="#menu">Menu</a>
+            <a href="#review">Review</a>
+            <a href="#order">Order</a>
+        </nav>
+
+        <div class="icons">
+            <i id="menu-bars" class="fa-solid fa-bars" ></i>
+            <i id="search" class="fa-solid fa-search" ></i>
+            <i class="fa-solid fa-heart"></i>
+            <i class="fa-solid fa-shopping-cart"></i>
+        </div>
+
+        <div  id="search-box">
+            <input id="search-input" type="text" placeholder="Search here..." />
+            <label for="search-input" class="fa-solid fa-search"></label>
+
+            <i id="search-box-close" class="fa-solid fa-times"></i>
+        </div>
+
+    </header>
 
 
-    
+
+    <script src="js/master.js"></script>
 </body>
+
 </html>
