Dishes section created

--- a/index.html
+++ b/index.html
@@ -17,11 +17,16 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap"
         rel="stylesheet">
+
+        <!-- swiper -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
     <link rel="stylesheet" href="css/master.css">
 
 </head>
 
 <body>
+    
     <header>
         <a href="#" class="logo"><i class="fa-solid fa-utensils"></i>resto.</a>
 
@@ -50,8 +55,236 @@
 
     </header>
 
+    <section class="home" id="home">
+        <div class="swiper home-slider">
+            <div class="swiper-wrapper wrapper">
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/1.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                            <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/2.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/3.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/4.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/5.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/6.png" alt="">
+                    </div>
+                </div>
+
+                <div class="swiper-slide slide">
+                    <div class="content">
+                        <span>our spectial dish</span>
+                        <h3>spicy noodles</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                            Quidem exercitationem nobis ea.</p>
+
+                        <a href="" class="btn">Order Now</a>
+                    </div>
+
+                    <div class="image">
+                        <img src="/img/7.png" alt="">
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="swiper-pagination"></div>
+        </div>
+
+    </section>
+
+    <section class="dishes" id="dishes">
+        <h3 class="sub-heading">our dishes</h3>
+        <h1 class="heading">popluer dishes</h1>
+
+        <div class="box-container">
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/8.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/9.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/10.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/11.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/12.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+            <div class="box">
+                <a href="#" class="fa-solid fa-heart"></a>
+                <a href="#" class="fa-solid fa-eye"></a>
+                <img src="img/7.png" alt="">
+                <h3>tasty food</h3>
+                <div class="stars">
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star"></i>
+                    <i class="fa-solid fa-star-half-alt"></i>
+                </div>
+
+                <span>$15.99</span>
+                <a href="#" class="btn">add to cart</a>
+            </div>
+
+        </div>
+
+    </section>
 
 
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/master.js"></script>
 </body>
 
