--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/1.png" alt="">
+                        <img src="img/1.png" alt="">
                     </div>
                 </div>
 
@@ -85,7 +85,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/2.png" alt="">
+                        <img src="img/2.png" alt="">
                     </div>
                 </div>
 
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/3.png" alt="">
+                        <img src="img/3.png" alt="">
                     </div>
                 </div>
 
@@ -115,7 +115,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/4.png" alt="">
+                        <img src="img/4.png" alt="">
                     </div>
                 </div>
 
@@ -130,7 +130,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/5.png" alt="">
+                        <img src="img/5.png" alt="">
                     </div>
                 </div>
 
@@ -145,7 +145,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/6.png" alt="">
+                        <img src="img/6.png" alt="">
                     </div>
                 </div>
 
@@ -160,7 +160,7 @@
                     </div>
 
                     <div class="image">
-                        <img src="/img/7.png" alt="">
+                        <img src="img/7.png" alt="">
                     </div>
                 </div>
 
